--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/demo-dao-jdbc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.3.0.jar=lib\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.4.0.jar=lib/mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
